Add frontend folder

--- a/frontend/src/Course.css
+++ b/frontend/src/Course.css
@@ -158,3 +158,17 @@ html, body {
   cursor: pointer;
 }
 
+.announcement-wrapper {
+  background: white;
+  padding: 30px;
+  border-radius: 25px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+}
+
+.announcement-item {
+  margin-bottom: 20px;
+}
+
+
+
