--- a/frontend/src/StudentProfile.css
+++ b/frontend/src/StudentProfile.css
@@ -3,15 +3,15 @@
 }
 
 .assignment-boxes {
-  display: flex;
+  display: auto;
   flex-direction: column;
-  gap: 30px;
+  gap: 10px;   /* reduced from 30px for tighter spacing */
 }
 
 .assignment-box {
   background-color: white;
   border-radius: 30px;
-  padding: 30px;
+ 
   box-shadow: 0 5px 18px rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: space-between;
